--- a/website_en/index.html
+++ b/website_en/index.html
@@ -7,7 +7,7 @@
   <!-- Primary Meta Tags -->
   <title>CamLingo – Learn Any Language from Pictures | AI-Powered Translation App</title>
   <meta name="title" content="CamLingo – Learn Any Language from Pictures | AI-Powered Translation App" />
-  <meta name="description" content="Snap a photo, tap words and see instant translations, examples and pronunciation. Learn 22 languages with AI-powered visual translation. Download CamLingo for iPhone and iPad." />
+  <meta name="description" content="Snap a photo, tap a word and see instant translations, examples and pronunciation. Learn 22 languages with AI-powered visual translation. Download CamLingo for iPhone and iPad." />
   <meta name="keywords" content="language learning, translation app, AI translation, visual translation, photo translation, language app, multilingual, OCR translation, camera translation, learn languages, foreign language, language tutor, translation tool, mobile language learning, iOS language app, picture translation, text recognition, language dictionary, pronunciation guide, vocabulary builder" />
   <meta name="author" content="CamLingo" />
   <meta name="robots" content="index, follow" />
@@ -286,10 +286,6 @@
         <div class="feature-item">
           <h3 data-i18n="features.snap.title">Snap & Translate</h3>
           <p data-i18n="features.snap.desc">Use your camera to capture any text. Our AI engine detects words and delivers accurate translations in seconds.</p>
-        </div>
-        <div class="feature-item">
-          <h3 data-i18n="features.visual.title">Visual Vocabulary Builder</h3>
-          <p data-i18n="features.visual.desc">Tap on individual words to view pronunciation, example sentences and save them to your personal list.</p>
         </div>
         <div class="feature-item">
           <h3 data-i18n="features.history.title">History & Review</h3>
