--- a/website_en/index.html
+++ b/website_en/index.html
@@ -374,6 +374,12 @@
         <li><a href="#" data-i18n="footer.privacy" data-link="privacy">Privacy Policy</a></li>
         <li><a href="#" data-i18n="footer.contact" data-link="support">Contact Support</a></li>
       </ul>
+      <div class="footer-partners">
+        <p class="partners-title" data-i18n="footer.partners">Partners</p>
+        <ul class="partners-links">
+          <li><a href="https://adaptiread.com" target="_blank" rel="nofollow noopener">AdaptiRead.com</a></li>
+        </ul>
+      </div>
       <p class="copyright" data-i18n="footer.copyright">© 2025 CamLingo. All rights reserved.</p>
     </div>
   </footer>
