--- a/website_en/index.html
+++ b/website_en/index.html
@@ -377,7 +377,7 @@
       <div class="footer-partners">
         <p class="partners-title" data-i18n="footer.partners">Partners</p>
         <ul class="partners-links">
-          <li><a href="https://adaptiread.com" target="_blank" rel="nofollow noopener">AdaptiRead.com</a></li>
+          <li><a href="https://adaptiread.com" target="_blank" rel="noopener">AdaptiRead.com</a></li>
         </ul>
       </div>
       <p class="copyright" data-i18n="footer.copyright">© 2025 CamLingo. All rights reserved.</p>
